fix back button and follow button color in dark mode

--- a/global.css
+++ b/global.css
@@ -73,6 +73,7 @@ export const dark: ITheme = {
             --color-foreground: #000000;
             --color-brand: var(--color-blue-600);
             --color-subtle: var(--color-gray-800);
+            --color-default: black;
 
             --color-background: white;
             --color-text: black;
@@ -88,6 +89,7 @@ export const dark: ITheme = {
             --color-foreground: #ffffff;
             --color-brand: var(--color-gold-200);
             --color-subtle: var(--color-gray-200);
+            --color-default: white;
 
             --color-background: #121212;
             --color-text: white;
